add Travis CI to the project